--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@portone/browser-sdk": "^0.0.12",
     "cra-template": "1.2.0",
-    "react": "18",
-    "react-dom": "18",
+    "nanoid": "^5.0.9",
+    "react": "^18",
+    "react-dom": "^18",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
