--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
     "@portone/browser-sdk": "^0.0.12",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "nanoid": "^5.0.9",
     "react": "^18",
