--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nanoid": "^5.0.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
@@ -19,7 +20,7 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "export PORT=3002 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
