--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
